# mygrid

./: Cargo.toml  function_diagram.drawio
config/: config.toml
scripts/: deploy.sh
src/: backup.rs  charge.rs  charge_level.rs  config.rs  consumption.rs  errors.rs  initialization.rs  logging.rs  macros.rs  main.rs  manager_files.rs  manual.rs  manual_scheduler.rs  manual_worker.rs  mode_scheduler.rs  mode_worker.rs  production.rs  scheduler.rs  scheduler_common.rs  scheduling.rs  scheduling_v2.rs  skips.rs  time_blocks.rs  worker.rs  worker_common.rs
src/manager_forecast/: mod.rs
src/manager_fox_cloud/: errors.rs  mod.rs
src/manager_mail/: errors.rs  mod.rs
src/manager_nordpol/: mod.rs
src/manager_nordpool/: errors.rs  mod.rs
src/manager_production/: mod.rs
src/manager_smhi/: errors.rs  mod.rs
src/manager_sun/: mod.rs
src/models/: charging_time_schedule.rs  device_details.rs  device_time.rs  forecast.rs  fox_charge_time_schedule.rs  fox_device_details.rs  fox_device_history_data.rs  fox_device_time.rs  fox_soc_settings.rs  mod.rs  nordpool_tariffs.rs  sendgrid.rs  smhi_forecast.rs  soc_settings.rs
systemd/: README.md  mygrid.service  start.sh
