[package]
name = "mygrid"
version = "3.1.3"
edition = "2021"

[dependencies]
md-5 = "0.10.6"
chrono = {  version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = "3.1"
toml = "0.9"
glob = "0.3"
lettre = "0.11"
log4rs = "1.4"
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
