[package]
name = "mygrid"
version = "5.0.0"
edition = "2024"

[dependencies]
chrono = {  version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
glob = "0.3"
lettre = "0.11"
log4rs = "1.4"
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
foxess = { version = "1.1", default-features = false, features = ["blocking"] }
